k8s yaml/mongo-pay.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: mongo-pay
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: mongo-pay
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mongo-pay
  name: mongo-pay
spec:
  containers:
  - image: mongo
    name: mongo-pay
    ports:
    - containerPort: 27017
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
