k8s yaml/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    run: user-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    run: user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 25%
        maxSurge: 25%
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: kec1226/user-service:v4
          ports:
          - containerPort: 8080
