k8s yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mynginx
spec:
  rules:
  - host: chong.local.com
    http:
      paths:
      - path: /
        backend:
          serviceName: user-service
          servicePort: 8080
